objects/CCA2_Goal_Score__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <referenceTo>CCA2_Answer__c</referenceTo>
        <relationshipLabel>Scores By Goal</relationshipLabel>
        <relationshipName>Goal_Scores</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CCA2_Goals__c</fullName>
        <label>CCA2_Goal</label>
        <referenceTo>CCA2_Goal__c</referenceTo>
        <relationshipLabel>Answer Scores</relationshipLabel>
        <relationshipName>CCA2_Goal_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Goal Score</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Score__c</columns>
        <columns>CCA2_Goals__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>CCA2_Goal Score  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goal Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>